@@ -26,6 +26,8 @@
 
 typedef struct grub_fshelp_node *grub_fshelp_node_t;
 
+#define GRUB_FSHELP_CASE_INSENSITIVE	0x100
+
 enum grub_fshelp_filetype
   {
     GRUB_FSHELP_UNKNOWN,
